# bigquery_pre-commit

./: .gitignore  .pre-commit-hooks.yaml  .pre-commit.config.yaml  bq_dryrun.py  setup.cfg  tox.ini
bq_pre_commit_hooks/: bq_dryrun.py
testing/resources/: fail_test.sql  pass_test.sql
tests/: bq_dryrun_test.py  check_bq_dryrun.py
