[metadata]
name = bq_dryrun
version = 2.2.0
description = perform dry run of sql to test validity
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = bq_dryrun
install_requires =
    google-cloud-bigquery
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bq-dryrun=bq_dryrun:main

[bdist_wheel]
universal = True