[metadata]
name = bq_pre_commit_hooks
version = 0.0.2
description = perform dry run of sql to test validity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenWeatherall/bigquery_pre-commit
author = Ben Weatherall
author_email = ben.weatherall@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    google-cloud-bigquery
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bq-dryrun = bq_pre_commit_hooks.bq_dryrun:main

[bdist_wheel]
universal = True